opam-version: "1.2"
name: "tjr_kv"

version: "0.0.1"

maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_kv"
bug-reports: "https://github.com/tomjridge/tjr_kv/issues"
dev-repo: "https://github.com/tomjridge/tjr_kv.git"

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "tjr_pcache"
  "tjr_btree"
  "tjr_lru_cache"
]

