opam-version : "2.0"
name         : "tjr_kv"
version      : "0.0.1"
synopsis     : "A key-value store for OCaml"

# ----------------------------------------------------------------------

maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/tjr_kv"
bug-reports  : "https://github.com/tomjridge/tjr_kv/issues"
dev-repo     : "git+https://github.com/tomjridge/tjr_kv.git"

# ----------------------------------------------------------------------

depends: [
  "tjr_btree"
  "tjr_btree_examples"
  "tjr_lru_cache"
  "tjr_mem_queue"
  "tjr_pcache" 
  "tjr_pcache_example"
  "tjr_pcache_test" # ?
]

# ----------------------------------------------------------------------

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
