(library
  (name tjr_kv)
  (public_name tjr_kv)
  (flags (:standard -open Tjr_monad -open Tjr_lib -open Tjr_fs_shared -open Tjr_pcache -open Tjr_pcache.Pcache_intf))  ; -27 is unused var, -39 is unused rec flag
  (preprocess (pps ppx_deriving_yojson))
;  (modules Synchronous_store Btree_ops Btree_model Msg) ; FIXME
  (libraries tjr_btree tjr_pcache tjr_lru_cache tjr_mem_queue))

(include_subdirs unqualified)

