(library
  (name tjr_kv)
  (public_name tjr_kv)
  (flags (:standard -open Tjr_monad -open Tjr_lib -open Tjr_profile -open Tjr_fs_shared 
  -open Tjr_btree -open Tjr_btree.Btree_intf 
  -open Tjr_pcache -open Tjr_pcache.Pcache_intf -open Tjr_pcache_example 
  -open Tjr_mem_queue -open Tjr_lru_cache  ))  
  (preprocess (pps ppx_deriving_yojson ppx_jane ))
  (preprocessor_deps (file "kv_config_optcomp.ml"))
  (libraries tjr_btree tjr_btree_examples tjr_pcache tjr_pcache_example tjr_lru_cache tjr_mem_queue ppx_jane))

(include_subdirs unqualified)

